SET(LIB_NAME carve)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OCTOON_PATH_SOURCE}/${LIB_OUTNAME})

SET(CARVE_LIST
	${HEADER_PATH}/face.h
	${HEADER_PATH}/vertex.h
	${HEADER_PATH}/polyhedron.h
)
SOURCE_GROUP(${LIB_NAME} FILES ${CARVE_LIST})

ADD_DEFINITIONS(-DOCTOON_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_OUTNAME} STATIC ${CARVE_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-math)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")